--- a/colabapp/colabapp/templates/index.html
+++ b/colabapp/colabapp/templates/index.html
@@ -30,7 +30,7 @@
             <div class="container-fluid p-0">
                 <div class="row g-0">
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="/academy/course/{{ course1_id}}" title="Project Name">
+                        <a class="portfolio-box" href="/academy/course/{{ course1.id}}" title="Project Name">
                             <img class="img-fluid" src="{% static 'assets/img/portfolio/thumbnails/1.jpg' %}" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
@@ -39,7 +39,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="/academy/course/{{ course2_id}}" title="Project Name">
+                        <a class="portfolio-box" href="/academy/course/{{ course2.id}}" title="Project Name">
                             <img class="img-fluid" src="{% static 'assets/img/portfolio/thumbnails/2.jpg' %}" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
