--- a/colabapp/colabapp/templates/course.html
+++ b/colabapp/colabapp/templates/course.html
@@ -9,6 +9,23 @@
                     <hr class="divider divider-light" />
                     <p class="text-white-75 mb-4">{{ course.description }}</p>
                     <a class="btn btn-light btn-xl" href="/academy/course/{{ course.id }}/subscribe">Inscribete $2000!</a>
+                    {% for message in messages %}
+                        {% if message.tags == "success" %}
+                            <div class="alert alert-success alert-dismissible fade show" 
+                            role="alert">{{ message }}
+                            <button type="button"
+                                class="btn-close"
+                                data-bs-dismiss="alert"
+                                aria-label="Close"></button>
+                        </div>
+                        {% endif %}
+
+                        {% if message.tags == "error" %}
+                            <div class="alert alert-danger">{{ message }}</div>
+
+                        {% endif %}
+                    {% endfor %}
+
                 </div>
             </div>
         </div>
