--- a/colabapp/colabapp/templates/course.html
+++ b/colabapp/colabapp/templates/course.html
@@ -8,7 +8,14 @@
                     <h2 class="text-white mt-0">{{ course.name }}</h2>
                     <hr class="divider divider-light" />
                     <p class="text-white-75 mb-4">{{ course.description }}</p>
-                    <a class="btn btn-light btn-xl" href="/academy/course/{{ course.id }}/subscribe">Inscribete $2000!</a>
+                    {% if subscribed %}
+                            <p class="text-white-75 mb-4">Relator: {{ subs.teacher.first_name }} {{ subs.teacher.last_name }}</p>
+                            <a class="btn btn-light btn-xl" 
+                            href="#">A clases</a>
+                    {% else %}
+                            <a class="btn btn-light btn-xl" 
+                            href="/academy/course/{{ course.id }}/subscribe">Inscribete $2000!</a>
+                    {% endif %}
                     {% for message in messages %}
                         {% if message.tags == "success" %}
                             <div class="alert alert-success alert-dismissible fade show" 
