--- a/colabapp/colabapp/templates/base.html
+++ b/colabapp/colabapp/templates/base.html
@@ -29,7 +29,7 @@
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/security/signup">Registrarse</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'admin:logout' %}">Salir</a></li>
                     </ul>
                 </div>
