--- a/colabapp/colabapp/templates/base.html
+++ b/colabapp/colabapp/templates/base.html
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#"> Bienvenido: {{ user.username }}</a></li>
                         <li class="nav-item"><a class="nav-link" href="/security/signup">Registrarse</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'admin:logout' %}">Salir</a></li>
                     </ul>
